--- a/views/scripts.ejs
+++ b/views/scripts.ejs
@@ -18,6 +18,10 @@
 <!-- SWAL-->
 <script src="/javascripts/sweetalert.min.js"></script>
 
+<script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
+<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
+
 <script>
     function success(title, text) {
         swal({
