Added Employees dropdown/input position backend save if not exist

--- a/views/branch/branch.ejs
+++ b/views/branch/branch.ejs
@@ -52,7 +52,8 @@
                                         class="btn btn-outline-inventory shadow-sm w-100"
                                         type="file"
                                         id="imageInput"
-                                        placeholder="Select Image"
+                                        placeholder="Select SVG Image"
+                                        accept="image/svg+xml"
                                     />
                                 </div>
                             </div>
