--- a/views/branch/branchscripts.ejs
+++ b/views/branch/branchscripts.ejs
@@ -160,7 +160,7 @@
                                 branchname: item.branchname,
                                 tin: item.tin,
                                 address: item.address,
-                                logo: `<img src="data:image/png;base64,${item.logo}" alt="#" style="max-width: 200px; max-height: 150px;" />`,
+                                logo: `<img src="data:image/svg+xml;base64,${item.logo}" alt="#" style="max-width: 200px; max-height: 150px;" />`,
                                 status: item.status,
                                 createdby: item.createdby,
                                 createddate: item.createddate,
