--- a/views/sidebar.ejs
+++ b/views/sidebar.ejs
@@ -84,10 +84,10 @@
                     <i class="fas fa-chart-line"></i>
                     <span>Sales Details</span>
                 </a>
-                <a class="collapse-item" href="/salesitems">
+                <!-- <a class="collapse-item" href="/salesitems">
                     <i class="fas fa-cart-arrow-down"></i>
                     <span>Sales Items</span>
-                </a>
+                </a> -->
                 <a class="collapse-item" href="/shiftreports">
                     <i class="fas fa-clipboard-list"></i>
                     <span>Shifts Reports</span>
