Fix Employee list dropdown no input and add users backend of position and access dropdown if not exist

--- a/views/users/users.ejs
+++ b/views/users/users.ejs
@@ -11,7 +11,10 @@
                     <div class="row mb-3">
                         <div class="col-md-6">
                             <div class="input-group">
-                                <input class="form-control text-center custom-input" placeholder="Select/Input Employee" name="employeeid" id="employeeid" aria-describedby="basic-addon2" />
+                                
+                                <select class="form-control text-center" name="employeelist" id="employeelist">
+                                    <option value="">--Select here--</option>
+                                </select>    
                                 <div class="input-group-append">
                                     <span class="input-group-text" id="basic-addon2">Employee ID</span>
                                 </div>
