--- a/views/sidebar.ejs
+++ b/views/sidebar.ejs
@@ -57,6 +57,10 @@
                     <i class="fa fa-shopping-bag" aria-hidden="true"></i>
                     <span>Products</span>
                 </a>
+                <a class="collapse-item" href="/category">
+                    <i class="fa fa-address-book" aria-hidden="true"></i>
+                    <span>Category</span>
+                </a>
                 <a class="collapse-item" href="/pos">
                     <i class="fa fa-calculator" aria-hidden="true"></i>
                     <span>POS</span>
