--- a/views/scripts.ejs
+++ b/views/scripts.ejs
@@ -52,3 +52,26 @@
         });
     }
 </script>
+
+<script>
+    $(document).ready(function() {
+        if ($('.collapse-item.active').length > 0) {
+            $('.collapse-item.active').closest('.collapse').addClass('show');
+        }
+
+        $('.collapse-item').click(function() {
+            $('.collapse-item').removeClass('active');
+            $(this).addClass('active');
+        });
+        
+        var path = window.location.pathname;
+
+        $('.collapse-item').each(function() {
+            var href = $(this).attr('href');
+            if (path === href) {
+                $(this).addClass('active');
+                $(this).closest('.collapse').addClass('show');
+            }
+        });
+    });
+</script>
