--- a/views/shiftreports/shiftreports.ejs
+++ b/views/shiftreports/shiftreports.ejs
@@ -6,43 +6,28 @@
         </div>
     <div class="card-body">
         <div class="table-responsive scrollable-table-container">
-            <table class="table table-bordered" id="position-dataTable" width="100%" cellspacing="10">
+            <table class="table table-bordered" id="shift-dataTable" width="100%" cellspacing="10">
                 <thead class="table-header">
                     <tr>
-                        <th class = "col-1">Date</th>
-                        <th class = "col-1">POS</th>
-                        <th class = "col-1">Shift</th>
-                        <th class = "col-1">Cashier</th>
-                        <th class = "col-1">Floating</th>
-                        <th class = "col-1">Cash Float</th>
-                        <th class = "col-1">Sales Beginning</th>
-                        <th class = "col-1">Sales Ending</th>   
-                        <th class = "col-1">Total Sales</th>   
-                        <th class = "col-1">Receipt Beginning</th>   
-                        <th class = "col-1">Receipt Ending</th>   
-                        <th class = "col-1">Status</th>   
-                        <th class = "col-1">Approved By</th>   
-                        <th class = "col-1">Approved Date</th>             
+                        <th>Date</th>
+                        <th>POS</th>
+                        <th>Shift</th>
+                        <th>Cashier</th>
+                        <th>Floating</th>
+                        <th>Cash Float</th>
+                        <th>Sales Beginning</th>
+                        <th>Sales Ending</th>   
+                        <th>Total Sales</th>   
+                        <th>Receipt Beginning</th>   
+                        <th>Receipt Ending</th>    
+                        <th>Approved By</th>   
+                        <th>Approved Date</th>   
+                        <th>Status</th>   
+                        <th>Action</th>          
                     </tr>
                 </thead>
                     
                 <tbody>
-                    <tr class="tr-hover">
-                        <td>1-0000001</td>
-                        <td>07/08/2023</td>
-                        <td>pos1</td>                                        
-                        <td>1</td>
-                        <td>e-payment, cash, card</td>      
-                        <td>Brush Black x 1pcs Paint Black x 1L</td>                                        
-                        <td>1520</td>
-                        <td>Joseph Orencio</td>      
-                        <td>e-payment, cash, card</td>      
-                        <td>Brush Black x 1pcs Paint Black x 1L</td>                                        
-                        <td>1520</td>
-                        <td>Joseph Orencio</td>       
-                        <td>1520</td>
-                        <td>Joseph Orencio</td>                      
-                    </tr>
                 </tbody>
             </table>
         </div>
