--- a/views/sidebar.ejs
+++ b/views/sidebar.ejs
@@ -33,8 +33,7 @@
             <i class="fas fa-fw fa-cog"></i>
             <span>Masters</span>
         </a>
-        <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
-            data-parent="#accordionSidebar">
+        <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
             <div class="bg-options py-2 collapse-inner rounded">
                 <h6 class="collapse-header">Contents:</h6>
                 <a class="collapse-item" href="/access">
