--- a/views/cashreports/cashreports.ejs
+++ b/views/cashreports/cashreports.ejs
@@ -6,7 +6,7 @@
         </div>
     <div class="card-body">
         <div class="table-responsive scrollable-table-container">
-            <table class="table table-bordered" id="position-dataTable" width="100%" cellspacing="10">
+            <table class="table table-bordered" id="cashreport-dataTable" width="100%" cellspacing="10">
                 <thead class="table-header">
                     <tr>
                         <th class = "col-1">Report ID</th>
@@ -16,6 +16,7 @@
                         <th class = "col-1">Cashier</th>
                         <th class = "col-1">Type</th>          
                         <th class = "col-1">Status</th>  
+                        <th class = "col-1">Action</th>  
                     </tr>
                 </thead>
                     
