--- a/views/productprice/productprice.ejs
+++ b/views/productprice/productprice.ejs
@@ -6,7 +6,7 @@
         </div>
     <div class="card-body">
         <div class="table-responsive scrollable-table-container">
-            <table class="table table-bordered" id="position-dataTable" width="100%" cellspacing="10">
+            <table class="table table-bordered" id="productprice-dataTable" width="100%" cellspacing="10">
                 <thead class="table-header">
                     <tr>
                         <th class = "col-1">Product Price Code</th>
@@ -18,29 +18,15 @@
                         <th class = "col-1">Category</th>
                         <th class = "col-1">Previous Price</th>   
                         <th class = "col-1">Price Change</th>   
-                        <th class = "col-1">Price Change Date</th>    
-                        <th class = "col-1">Status</th>   
+                        <th class = "col-1">Price Change Date</th>   
                         <th class = "col-1">Created By</th>   
-                        <th class = "col-1">Created Date</th>             
+                        <th class = "col-1">Created Date</th>     
+                        <th class = "col-1">Status</th>    
+                        <th class = "col-1">Action</th>        
                     </tr>
                 </thead>
                     
                 <tbody>
-                    <tr class="tr-hover">
-                        <td>1-0000001</td>
-                        <td>07/08/2023</td>
-                        <td>pos1</td>                                        
-                        <td>1</td>
-                        <td>e-payment, cash, card</td>      
-                        <td>2000</td>                                        
-                        <td>1520</td>
-                        <td>Joseph Orencio</td>      
-                        <td>e-payment, cash, card</td>      
-                        <td>Brush Black x 1pcs Paint Black x 1L</td>                                        
-                        <td>1520</td>
-                        <td>Joseph Orencio</td>       
-                        <td>1520</td>                   
-                    </tr>
                 </tbody>
             </table>
         </div>
