Added getcategory route for product price and added new model for data collection

--- a/views/productprice/productpricescripts.ejs
+++ b/views/productprice/productpricescripts.ejs
@@ -80,7 +80,7 @@ $(document).ready(function () {
                 { data: 'createdby', className: 'no-wrap'},
                 { data: 'createddate', className: 'no-wrap'},
                 { data: 'status', className: 'no-wrap'},
-                { data: 'action', className: 'no-wrap'},
+                { data: 'action'},
             ],
             'fixedHeader': true,
             initComplete: function () {
