Updated Masters Users Added password and username

--- a/views/users/users.ejs
+++ b/views/users/users.ejs
@@ -72,6 +72,8 @@
                         <th class = "col-1">Employee ID</th>
                         <th class = "col-1">Access Type</th>
                         <th class = "col-1">Position Type</th>
+                        <th class = "col-1">Username</th>
+                        <th class = "col-1">Password</th>
                         <th class = "col-1">Created by</th>
                         <th class = "col-1">Created date</th>
                         <th class = "col-1">Status</th>
