Updated Masters Product added price and barcode

--- a/views/products/products.ejs
+++ b/views/products/products.ejs
@@ -26,6 +26,26 @@
                             </div>
                         </div>
                     </div>
+                    
+                    <div class="row mb-3">
+                        <div class="col-md-6">
+                            <div class="input-group">
+                                <div class="input-group-prepend">
+                                    <span class="input-group-text" id="basic-addon2">Price</span>
+                                </div>
+                                <input id="price" name="price" type="text" class="form-control" placeholder="Enter Product Price" aria-label="employeeid" aria-describedby="basic-addon1">
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="input-group">
+                                <div class="input-group-prepend">
+                                    <span class="input-group-text" id="basic-addon2">Product Barcode</span>
+                                </div>
+                                <input id="barcode" name="barcode" type="text" class="form-control" placeholder="Enter Barcode" aria-label="fullname" aria-describedby="basic-addon1">
+                            </div>
+                        </div>
+                    </div>
+
                     <div class="row justify-content-center">
                         <div class="col-md-6">
                             <div class="input-group mb-3">
@@ -77,9 +97,11 @@
                     <tr>
                         <th class = "col-1">Product ID</th>
                         <th class = "col-1">Description</th>
-                        <th class = "col-3">Product Image</th>
+                        <th class = "col-1">Price</th>
+                        <th class = "col-2">Barcode</th>
+                        <th class = "col-1">Product Image</th>
                         <th class = "col-2">Created by</th>
-                        <th class = "col-2">Created date</th>
+                        <th class = "col-1">Created date</th>
                         <th class = "col-1">Status</th>
                         <th class = "col-2">Action</th>               
                     </tr>
