Added API for price change and load

--- a/views/pricechange/pricechange.ejs
+++ b/views/pricechange/pricechange.ejs
@@ -6,27 +6,20 @@
         </div>
     <div class="card-body">
         <div class="table-responsive scrollable-table-container">
-            <table class="table table-bordered" id="position-dataTable" width="100%" cellspacing="10">
+            <table class="table table-bordered" id="pricechange-dataTable" width="100%" cellspacing="10">
                 <thead class="table-header">
                     <tr>
                         <th class = "col-1">Price Change ID</th>
-                        <th class = "col-1">Product Code</th>
+                        <th class = "col-1">Product ID</th>
                         <th class = "col-1">Price</th>
-                        <th class = "col-1">Status</th>
                         <th class = "col-1">Created By</th>
-                        <th class = "col-1">Created Date</th>          
+                        <th class = "col-1">Created Date</th>  
+                        <th class = "col-1">Status</th>  
+                        <th class = "col-1">Action</th>       
                     </tr>
                 </thead>
                     
                 <tbody>
-                    <tr class="tr-hover">
-                        <td>1-0000001</td>
-                        <td>1009</td>
-                        <td>1000</td>                                        
-                        <td>ACTIVE</td>
-                        <td>Ralph Lauren Santos</td>                                           
-                        <td>07/08/2023</td>                         
-                    </tr>
                 </tbody>
             </table>
         </div>
