--- a/views/salesdetails/salesdetailsscripts.ejs
+++ b/views/salesdetails/salesdetailsscripts.ejs
@@ -2,6 +2,25 @@
     document.addEventListener('DOMContentLoaded', () => {
         data = [];
 
+        populateTable(data);
+
+        function getCurrentDate() {
+            const today = new Date();
+            const year = today.getFullYear();
+            const month = String(today.getMonth() + 1).padStart(2, '0');
+            const day = String(today.getDate()).padStart(2, '0');
+            return `${year}-${month}-${day}`;
+        }
+
+        function getTomorrowDate() {
+            const tomorrow = new Date();
+            tomorrow.setDate(tomorrow.getDate() + 1);
+            const year = tomorrow.getFullYear();
+            const month = String(tomorrow.getMonth() + 1).padStart(2, '0');
+            const day = String(tomorrow.getDate()).padStart(2, '0');
+            return `${year}-${month}-${day}`;
+        }
+
         function populateTable(data) {
             console.log(data);
             const tableBody = document.querySelector('#salesdetail-dataTable tbody');
@@ -29,7 +48,26 @@
             }
         }
 
-        populateTable(data);
+        const currentDate = getCurrentDate();
+        const tomorrowDate = getTomorrowDate();
+        $.ajax({
+            url: '/salesdetails/load',
+            method: 'GET',
+            dataType: 'json',
+            data: {
+                dateRange: `${currentDate} to ${tomorrowDate}`
+            },
+            success: function (data) {
+                if (data.msg === 'success') {
+                    populateTable(data.data);
+                } else {
+                    console.error(data.msg);
+                }
+            },
+            error: function (error) {
+                console.error(error);
+            }
+        });
         
         $(document).on('click', '#addBtn', function () {
             const shiftValue = $('#shift').val();
