Updated inputs for masters products and minor adjustments for dropdowns

--- a/views/products/products.ejs
+++ b/views/products/products.ejs
@@ -12,17 +12,20 @@
                         <div class="col-md-6">
                             <div class="input-group">
                                 <div class="input-group-prepend">
-                                    <span class="input-group-text" id="basic-addon2">Product ID</span>
+                                    <span class="input-group-text" id="basic-addon2">Description</span>
                                 </div>
-                                <input id="productid" name="productid" type="text" class="form-control" placeholder="Enter Product ID" aria-label="employeeid" aria-describedby="basic-addon1">
+                                <input id="description" name="description" type="text" class="form-control" placeholder="Enter Description" aria-label="fullname" aria-describedby="basic-addon1">
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="input-group">
                                 <div class="input-group-prepend">
-                                    <span class="input-group-text" id="basic-addon2">Description</span>
+                                    <span class="input-group-text">Category</span>
                                 </div>
-                                <input id="description" name="description" type="text" class="form-control" placeholder="Enter Description" aria-label="fullname" aria-describedby="basic-addon1">
+                                <input class="form-control text-center custom-input" placeholder="Select/Input category" name="category" id="category"/>
+                                
+                            </div>
+                            <div class="custom-dropdown" id="categoryDropdown">
                             </div>
                         </div>
                     </div>
