--- a/views/employees/employeesscripts.ejs
+++ b/views/employees/employeesscripts.ejs
@@ -246,6 +246,13 @@ $(document).ready(function () {
             }
             dropdownElement.style.display = "block";
         });
+
+        document.addEventListener("click", function (event) {
+                const target = event.target;
+                if (!dropdownElement.contains(target) && target !== inputElement) {
+                    dropdownElement.style.display = "none";
+                }
+            });
     }
 
     function addOption(dropdownId, optionText) {
