--- a/views/salesdetails/salesdetails.ejs
+++ b/views/salesdetails/salesdetails.ejs
@@ -50,7 +50,7 @@
 
     <div class="card shadow mb-4 table-size">
         <div class="card-header py-3 header-bg">
-            <h6 class="m-0 font-weight-bold table-title text-white">DataTables Example</h6>
+            <h6 class="m-0 font-weight-bold table-title text-white">Sales Details:</h6>
         </div>
     <div class="card-body">
         <div class="table-responsive scrollable-table-container">
