--- a/views/products/products.ejs
+++ b/views/products/products.ejs
@@ -23,9 +23,8 @@
                                     <span class="input-group-text">Category</span>
                                 </div>
                                 <input class="form-control text-center custom-input" placeholder="Select/Input category" name="category" id="category"/>
-                                
                             </div>
-                            <div class="custom-dropdown" id="categoryDropdown">
+                            <div class="custom-dropdown categoryDropdown" id="categoryDropdown">
                             </div>
                         </div>
                     </div>
