Added login page and scripts with session

--- a/views/sidebar.ejs
+++ b/views/sidebar.ejs
@@ -3,7 +3,7 @@
     <!-- Sidebar - Brand -->
     <a class="sidebar-brand d-flex align-items-center justify-content-center" href="/index">
         <div class="sidebar-brand-icon">
-            <img src="/images/img/logo(white).png" class="img-fluid" alt="Responsive image">
+            <img src="images/img/5L_logo(White).png" class="img-fluid" alt="Responsive image">
         </div>
         <div class="sidebar-brand-text mx-3">Sales Inventory</div>
     </a>
