--- a/public/stylesheets/css/style.css
+++ b/public/stylesheets/css/style.css
@@ -9,7 +9,7 @@
 
   --clr-sb-bg: #9c2c3d;
 
-  --clr-body-bg: #1d2636;
+  --clr-body-bg: #1a202b;
 
   --bg-clr: #6d1825;
   --clr-5: #313638;
@@ -24,7 +24,7 @@
 
 body {
   margin: 0px;
-  padding: 0px;
+  padding: .8rem .8rem 0rem .8rem;
   font-family: var(--ff-main) !important;
   background-color: var(--clr-body-bg) !important;
 }
@@ -58,6 +58,31 @@ a {
   margin-left: 5rem;
 }
 
+/* --- LOG IN PAGE ---*/
+.custom-login-container{
+  display: flex;
+  flex-direction: column;
+  place-content: center;
+  height: 98vh;
+  position: relative;
+  z-index: 1;
+}
+
+.custom-login-container .bg{
+  background-image: url('/images/img/Black-And-Red-HD-Wallpapers.jpg');
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  opacity: .35;
+  width: 100%;
+  height: 100%;
+  border-radius: 0.875rem;
+}
+
+
 /* --- SIDEBAR --- */
 
 .collapse-item.active {
@@ -71,8 +96,6 @@ a {
 }
 
 .sidebar{
-  margin-top: 10px;
-  margin-left: 10px;
   min-height: 98vh !important;
   border-radius: 0.375rem;
 }
@@ -93,7 +116,7 @@ a {
 }
 
 .topbar{
-  margin: 10px !important;
+  margin: 0px 0px 10px 10px;
 }
 
 #content-wrapper{
@@ -104,7 +127,7 @@ a {
 
 .container-fluid{
   padding-left: 0.75rem !important; 
-  padding-right: 0.75rem !important;
+  padding-right: 0rem !important;
 }
 
 /* BUTTONS */
@@ -130,6 +153,17 @@ a {
 }
 
 .btn-outline-inventory:hover{
+  color: var(--clr-font-white) !important;
+  background-color: var(--clr-6);
+  border-color: var(--clr-6);
+}
+
+.btn-outline-inventory-lighter{
+  color: var(--clr-7) !important;
+  border-color: var(--clr-7) !important;
+}
+
+.btn-outline-inventory-lighter:hover{
   color: var(--clr-font-white) !important;
   background-color: var(--clr-6);
   border-color: var(--clr-6);
@@ -204,6 +238,18 @@ td{
 
   .align{
     text-align: right !important;
+  }
+
+  .custom-mobile-responsive{
+    margin-left: 15px !important;
+    margin-right: 15px !important;
+  }
+
+}
+
+@media (max-width: 990px) {
+  .display-custom{
+    display: none !important;
   }
 }
 
