--- a/views/scripts.ejs
+++ b/views/scripts.ejs
@@ -1,3 +1,37 @@
+
+<div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
+                <button
+                    class="close"
+                    type="button"
+                    data-dismiss="modal"
+                    aria-label="Close"
+                >
+                    <span aria-hidden="true">×</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                Select "Logout" below if you are ready to end your current session.
+            </div>
+            <div class="modal-footer">
+                <button class="btn btn-secondary" type="button" data-dismiss="modal">
+                    Cancel
+                </button>
+                <button name="logoutBtn" id="logoutBtn" class="btn btn-primary">
+                    Logout
+                </button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<script>
+
+</script>
+
 <!-- Bootstrap core JavaScript-->
 <script src="vendor/jquery/jquery.min.js"></script>
 <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
@@ -24,12 +58,28 @@
 
 <script>
     function success(title, text) {
-        swal({
+    return swal({
         title: title,
         text: text,
         icon: "success",
+        buttons: {
+            confirm: {
+                text: "OK",
+                value: true,
+                visible: true,
+                className: "swal-button-ok",
+            }
+        }
+    }).then((result) => {
+        return new Promise((resolve, reject) => {
+            if (result === true) {
+                resolve();
+            } else {
+                reject();
+            }
         });
-    }
+    });
+}
     function warning(title, text) {
         swal({
         title: title,
@@ -51,6 +101,20 @@
         icon: "error",
         });
     }
+
+    $(document).on("click", "#logoutBtn", function () {
+    $.ajax({
+        type: "POST",
+        url: "/login/logout",
+        success: function (result) {
+            success("Logout", "Successfully");
+            location.replace("/");
+        },
+        error: function (err) {
+            errormsg(err);
+        },
+    });
+});
 </script>
 
 <script>
