--- a/views/employees/employees.ejs
+++ b/views/employees/employees.ejs
@@ -8,8 +8,8 @@
                     <h6 class="m-0 font-weight-bold text-white">Employees</h6>
                 </div>
                 <div class="card-body extend">
-                    <div class="row mb-3">
-                        <div class="col-md-6">
+                    <div class="row mb-2">
+                        <div class="col-md-6 mmb">
                             <div class="input-group">
                                 <div class="input-group-prepend">
                                     <span class="input-group-text" id="basic-addon2">Employee ID</span>
@@ -26,8 +26,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row mb-3">
-                        <div class="col-md-6">
+                    <div class="row mb-2">
+                        <div class="col-md-6 mmb">
                             <div class="input-group">
                                 <div class="input-group-prepend">
                                     <span class="input-group-text">Position</span>
