--- a/views/pos/pos.ejs
+++ b/views/pos/pos.ejs
@@ -8,8 +8,8 @@
                     <h6 class="m-0 font-weight-bold text-white">Point of Sale</h6>
                 </div>
                 <div class="card-body extend">
-                    <div class="row mb-3">
-                        <div class="col-md-6">
+                    <div class="row mb-2">
+                        <div class="col-md-6 mmb">
                             <div class="input-group">
                                 <div class="input-group-prepend">
                                     <span class="input-group-text" id="basic-addon2">POS ID</span>
@@ -26,8 +26,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row mb-3">
-                        <div class="col-md-6">
+                    <div class="row mb-2">
+                        <div class="col-md-6 mmb">
                             <div class="input-group">
                                 <div class="input-group-prepend">
                                     <span class="input-group-text">Serial</span>
@@ -44,8 +44,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row mb-3 justify-content-center">
-                        <div class="col-md-6">
+                    <div class="row mb-2 justify-content-center">
+                        <div class="col-md-6 mmb">
                             <div class="input-group">
                                 <div class="input-group-prepend">
                                     <span class="input-group-text" id="basic-addon2">PTU</span>
@@ -55,7 +55,7 @@
                         </div>
                     </div>
                     <div class="row d-flex justify-content-end">
-                        <div class="col-md-2 align mt-2">
+                        <div class="col-md-2 align">
                             <button id="addBtn" name="addBtn" class="btn btn-sm btn-outline-inventory shadow-sm w-100">
                                 <i class="fa fa-plus" aria-hidden="true"></i>
                                 ADD
