--- a/views/users/users.ejs
+++ b/views/users/users.ejs
@@ -8,10 +8,9 @@
                     <h6 class="m-0 font-weight-bold text-white">Users</h6>
                 </div>
                 <div class="card-body extend">
-                    <div class="row mb-3">
-                        <div class="col-md-6">
+                    <div class="row mb-2">
+                        <div class="col-md-6 mmb">
                             <div class="input-group">
-                                
                                 <select class="form-control text-center" name="employeelist" id="employeelist">
                                     <option value="">--Select here--</option>
                                 </select>    
@@ -46,7 +45,7 @@
                         </div>
                     </div>
                     <div class="row d-flex justify-content-end">
-                        <div class="col-md-2 align mt-2">
+                        <div class="col-md-2 align mt-3">
                             <button id="addBtn" name="addBtn" class="btn btn-sm btn-outline-inventory shadow-sm w-100">
                                 <i class="fa fa-plus" aria-hidden="true"></i>
                                 ADD
