--- a/views/salesdetails/salesdetails.ejs
+++ b/views/salesdetails/salesdetails.ejs
@@ -7,8 +7,8 @@
                     <h6 class="m-0 font-weight-bold text-white">Sales Details Filter</h6>
                 </div>
                 <div class="card-body extend">
-                    <div class="row mb-3">
-                        <div class="col-md-6">
+                    <div class="row mb-2">
+                        <div class="col-md-6 mmb">
                             <div class="input-group">
                                 <div class="input-group-prepend">
                                     <span class="input-group-text" id="basic-addon2">Date Range</span>
