--- a/public/stylesheets/css/style.css
+++ b/public/stylesheets/css/style.css
@@ -255,6 +255,14 @@ td{
   .mmb{
     margin-bottom: 10px;
   }
+  
+  body{
+    padding: .8rem .8rem 0rem 0rem;
+  }
+  
+  .sidebar{
+    border-radius: 0 0.375rem 0.375rem 0;
+  }
 }
 
 @media (max-width: 990px) {
