--- a/views/login/login.ejs
+++ b/views/login/login.ejs
@@ -1,6 +1,6 @@
 <div class="custom-login-container">
     <div class="bg"></div>
-    <div class="row d-flex justify-content-center align-items-center h-100">
+    <div class="row d-flex justify-content-center align-items-center login-height">
         <div class="col-md-9 col-lg-6 col-xl-5">
             <img src="\images\img\5L_logo-white2.png"
             class="img-fluid" alt="Sample image">
